--- a/edu/WebContent/WEB-INF/web.xml
+++ b/edu/WebContent/WEB-INF/web.xml
@@ -9,4 +9,19 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+        <servlet>
+    <servlet-name>TestServ</servlet-name>
+    <servlet-class>co.yedam.app.test.TestServ</servlet-class>
+    <init-param>
+    <param-name>pName</param-name>
+    <param-value>utf-8</param-value>
+    </init-param>
+    </servlet>
+    <servlet-mapping>
+    <servlet-name>TestServ</servlet-name>
+    <url-pattern>/test3.do</url-pattern>
+    </servlet-mapping>    <servlet-mapping>
+    <servlet-name>TestServ</servlet-name>
+    <url-pattern>/test4.do</url-pattern>
+    </servlet-mapping>
 </web-app>
